add accessibility for qwerty

--- a/index.html
+++ b/index.html
@@ -93,11 +93,8 @@
 
       <!-- Classical Mode - Difficulty Levels Modal -->
       <section class="modal difficulty-level-modal" id="difficulty-level-modal">
-        <button type="button">
-          <span
-            class="material-icons modal-close-btn difficulty-lvl-close-btn"
-            id="difficulty-lvl-close-btn"
-          >
+        <button type="button" id="difficulty-lvl-close-btn">
+          <span class="material-icons modal-close-btn difficulty-lvl-close-btn">
             close
           </span>
         </button>
@@ -110,11 +107,8 @@
 
       <!-- Choose Category Modal -->
       <section class="modal choose-category-modal" id="choose-category-modal">
-        <button>
-          <span
-            class="material-icons modal-close-btn category-close-btn"
-            id="category-close-btn"
-          >
+        <button id="category-close-btn">
+          <span class="material-icons modal-close-btn category-close-btn">
             close
           </span>
         </button>
