fix qwerty size

--- a/storyline.html
+++ b/storyline.html
@@ -93,8 +93,7 @@
               <h3>Timed</h3>
               <p>
                 You have a limited time to guess the word before Dragon awakens.
-                Timer starts when the first guess is made. If time runs out, you
-                loose. Free hint available.
+                If time runs out, you loose. Free hint available.
               </p>
             </div>
             <div class="category">
