--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- JS -->
-    <script defer src="./main.js"></script>
+    <script defer src="./src/main.js"></script>
     <!-- Material Icon CDN -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -18,16 +18,20 @@
       rel="stylesheet"
     />
     <!-- CSS Global -->
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <!-- CSS Contact -->
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="./styles/contact.css" />
     <title>The Sleeping Dragon</title>
   </head>
   <body>
     <header>
       <div class="inner-header">
         <div class="logo">
-          <img src="./images/logo.svg" alt="logo of dragon" width="24px" />
+          <img
+            src="./assets/images/logo.svg"
+            alt="logo of dragon"
+            width="24px"
+          />
         </div>
         <nav>
           <ul class="menu">
@@ -64,7 +68,11 @@
       <div class="container">
         <div class="contact-wrapper">
           <div class="dragon-eye">
-            <img src="./images/beast-eye.svg" alt="dragon image" width="45px" />
+            <img
+              src="./assets/images/beast-eye.svg"
+              alt="dragon eye"
+              width="45px"
+            />
           </div>
           <h1>Contact Me</h1>
           <p>Send word to the keeper of The Sleeping Dragon</p>
@@ -121,7 +129,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/youtube.svg"
+                  src="./assets/images/youtube.svg"
                   alt="youtube logo"
                   width="24px"
                   class="social-logo"
@@ -133,7 +141,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/facebook.svg"
+                  src="./assets/images/facebook.svg"
                   alt="facebook logo"
                   width="24px"
                   class="social-logo"
@@ -145,7 +153,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/instagram.svg"
+                  src="./assets/images/instagram.svg"
                   alt="instagram logo"
                   width="24px"
                   class="social-logo"
