--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- JS -->
-    <script defer src="./main.js"></script>
+    <script defer src="./src/main.js"></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Material Icon CDN -->
@@ -20,31 +20,39 @@
       rel="stylesheet"
     />
     <!-- CSS Global -->
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <!-- CSS INDEX -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <!-- FAVICON -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/icons/apple-touch-icon.png"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/favicon.ico?v=2-32x32.png"
+      href="./assets/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/favicon.ico?v=2-16x16.png"
+      href="./assets/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./assets/icons/site.webmanifest" />
     <title>The Sleeping Dragon</title>
   </head>
   <body class="grey-theme">
     <header>
       <div class="inner-header">
         <div class="logo">
-          <img src="./images/logo.svg" alt="logo of dragon" width="24px" />
+          <img
+            src="./assets/images/logo.svg"
+            alt="logo of dragon"
+            width="24px"
+          />
         </div>
         <nav>
           <ul class="menu">
@@ -209,7 +217,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/youtube.svg"
+                  src="./assets/images/youtube.svg"
                   alt="youtube logo"
                   width="24px"
                   class="social-logo"
@@ -221,7 +229,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/facebook.svg"
+                  src="./assets/images/facebook.svg"
                   alt="facebook logo"
                   width="24px"
                   class="social-logo"
@@ -233,7 +241,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/instagram.svg"
+                  src="./assets/images/instagram.svg"
                   alt="instagram logo"
                   width="24px"
                   class="social-logo"
