--- a/score.html
+++ b/score.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- JS -->
-    <script defer src="./main.js"></script>
+    <script defer src="./src/main.js"></script>
     <!-- Material Icon CDN -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -18,16 +18,20 @@
       rel="stylesheet"
     />
     <!-- CSS Global -->
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <!-- CSS Score -->
-    <link rel="stylesheet" href="score.css" />
+    <link rel="stylesheet" href="./styles/score.css" />
     <title>The Sleeping Dragon - Score</title>
   </head>
   <body>
     <header>
       <div class="inner-header">
         <div class="logo">
-          <img src="./images/logo.svg" alt="logo of dragon" width="24px" />
+          <img
+            src="./assets/images/logo.svg"
+            alt="logo of dragon"
+            width="24px"
+          />
         </div>
         <nav>
           <ul class="menu">
@@ -97,7 +101,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/youtube.svg"
+                  src="./assets/images/youtube.svg"
                   alt="youtube logo"
                   width="24px"
                   class="social-logo"
@@ -109,7 +113,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/facebook.svg"
+                  src="./assets/images/facebook.svg"
                   alt="facebook logo"
                   width="24px"
                   class="social-logo"
@@ -121,7 +125,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/instagram.svg"
+                  src="./assets/images/instagram.svg"
                   alt="instagram logo"
                   width="24px"
                   class="social-logo"
